--- a/variables.less
+++ b/variables.less
@@ -5,3 +5,4 @@
 
 @font-family-base:			Lora, Georgia, serif;
 @font-family-secondary: 	Bitter, Georgia, serif;
+@font-family-script:		'Give You Glory', cursive;
